refactor: health to be handler_health
